<resources>
    <string name="app_name">象山村民说事</string>

    <string name="village_qr_code">村民电子码</string>
    <string name="my_vote">我的投票</string>
    <string name="my_investigate">我的调查</string>
    <string name="my_report">我的报备</string>

    <string name="my_talking">我要说事</string>
    <string name="village_news">村内资讯</string>
    <string name="handle_upload">随手上报</string>
    <string name="event_report">事项报备</string>

    <string name="my_suggestion">我要议事</string>
    <string name="meeting_record">会议直播</string>
    <string name="vote_investigate">投票调研</string>
    <string name="file_upload">资料上传</string>

    <string name="my_doing">我要办事</string>
    <string name="home_stay_report">民宿报批</string>
    <string name="beautiful_village">美丽乡村</string>
    <string name="village_property_transaction">产权交易</string>
    <string name="three_property_management">三资管理</string>
    <string name="trust_rank">诚信指数</string>
    <string name="township_counselor">乡贤参事</string>

    <string name="my_discuss">我要评事</string>
    <string name="results_public">结果公示</string>
    <string name="satisfaction_measurement">满意度测评</string>

    <string name="news_information">新闻资讯</string>

    <string name="browse_history">浏览记录</string>
    <string name="my_notify">我的通知</string>
    <string name="feedback_suggestion">意见反馈</string>
    <string name="help_info">帮助说明</string>
    <string name="branch_info">版本信息</string>

    <string name="admin">管理员</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="title_activity_ware_detail">WareDetailActivity</string>
    <string name="share">分享</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_info">个人资料</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的消息</string>
    <string name="logout">退出登录</string>
    <string name="to_login">点击登录</string>
    <string name="token_error">登录失效，请重新登录</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="create_order">填写订单</string>
    <string name="pay_result">支付结果</string>
    <string name="add_addresses">新建收件地址</string>
    <string name="code_end">请重新发送验证码</string>


</resources>